--- a/package.json
+++ b/package.json
@@ -5,8 +5,16 @@
   "author": "Paul Weil <dark.illuminations@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "babel-eslint": "^10.0.1",
     "body-parser": "^1.18.3",
+    "eslint": "^5.6.1",
+    "eslint-config-react-app": "^3.0.3",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "express": "^4.16.3",
+    "global": "^4.3.2",
     "mongodb": "^3.1.6",
     "path": "^0.12.7"
   },
